# advent-of-code-2023

./: .gitignore  shell.nix  utils.ts
.direnv/: nix-profile-.4981.5b528f99f73c  nix-profile-.4981.5b528f99f73c.rc
01/rust/: Cargo.toml  rust-toolchain.toml
01/rust/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
01/rust/src/: lib.rs  main.rs
01/src/: challenge.ts  decipher_map_2.ts  utils.ts  utils_test.ts
01/ts/src/: decipher_map_2.ts
02/src/: challenge.ts  utils.ts
03/src/: challenge.ts  utils.ts
04/ts/src/: challenge.ts  utils.ts
05/ts/src/: challenge.ts  utils.ts  utils_test.ts
06/ts/src/: challenge.ts  utils.ts
07/ts/src/: utils.ts
08/: article.md  lib.rs  the_weird_magic_of_part_2.txt
08/python/: AI.md  shell.nix
08/python/src/: challenge.py  utils.py
08/rost/: flake.nix
08/rost/src/: lib.rs
08/rust/: .gitignore  Cargo.toml  temp.txt
08/rust/src/: lib.rs  main.rs  tapif.rs  walker.rs
08/ts/src/: challenge.ts  challenge_input.ts  utils.ts  utils_test.ts
09/ts/src/: challenge.ts  utils.ts
10/ts/: utils.ts  utils_test.ts
11/ts/: challenge.ts  utils.ts
12/ts/: challenge.ts  explore.ts  utils.ts  utils_test.ts
13/ts/: challenge.ts  utils.ts  utils_test.ts
