[package]
name = "advent-of-code-23-08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
fnv = "1.0.7"
lazy_static = "1.4.0"
ouroboros = "0.18.4"
regex = "1.10.3"
tap = "1.0.1"

[features]
default = []
debug = []
# I'm not entirely sure if these are the correct assumptions, and whether they are
# independent of each other
assume_constant_z_distances = [] # enables certain optimizations
use_lcm = [] # "Cheat" using the lcm approach. Also only works under the assumption of constant z distances
medium_test = []
heavy_test = ["medium_test"] # Execute full test suite, may take long
